--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,65 +1,5 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
-
-@font-face {
-	font-family: 'Cairo', sans-serif;
-	src: url('~assets/styles/font/Cairo-VariableFont_slnt,wght.ttf');
-}
-
-$body-font-family: 'Cairo', sans-serif !important;
+$body-font-family: 'Cairo', sans-serif;
 $card-title-word-break: break-word;
-
-.v-application,
-.v-application .headline,
-.v-application .title,
-.v-application .subtitle-1,
-.v-application .subtitle-2,
-.v-application .body-1,
-.v-application .body-2,
-.v-application .text-h1,
-.v-application .text-h2,
-.v-application .text-h3,
-.v-application .text-h4,
-.v-application .text-h5,
-.v-application .text-h6,
-.v-application .caption
-{
-  font-family: 'Cairo', sans-serif !important;
-}
-
-.d-contents {
-  display: contents;
-}
-.justify-content-evenly {
-  justify-content: space-evenly !important;
-}
-
-// space
-.full-width {
-  width: 100%;
-}
-.full-height {
-  height: 100%;
-}
-.auto-height {
-  height: auto !important;
-}
-
-// image
-.size-fill {
-  background-size: 100% 100%;
-  .v-image__image {
-    background-size: 100% 100%;
-  }
-}
-
-// table
-.even-row {
-  tbody tr:nth-child(even) {background: #ffdc2c40}
-}
-
-.card-elevation-8 {
-  box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px -2px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%) !important;
-}
+$switch-track-inset-border-radius: 12.5px;
+$btn-focus-opacity: 0.08;
+$btn-letter-spacing: 0em;
