--- a/assets/global.css
+++ b/assets/global.css
@@ -90,3 +90,7 @@ html {
 .card-shadow {
   box-shadow: 0 5px 15px 0 rgba(0, 33, 44, 0.06) !important;
 }
+
+.card-shadow-2 {
+  box-shadow: -5px 0 15px 0 rgba(0, 33, 44, 0.06);
+}
